tests/fail/invalid_name3.stderr
error: invalid identifier, must be one of `frequency`, `rate`, `len`, `repeats`, `skip` and `type`
 --> tests/fail/invalid_name3.rs:9:60
  |
9 |     let _wave = sine_wave!(rate: 2000, len: 100, skip: 50, invalid: 123);
  |                                                            ^^^^^^^
